Surpressing error messages

--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -18,3 +18,10 @@ p {
   font-size: 20px;
 }
 
+.shiny-output-error {
+  visibility: hidden;
+}
+
+.shiny-output-error:before {
+  visibility: hidden; 
+}
